--- a/package.json
+++ b/package.json
@@ -5,6 +5,21 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.18.2"
-  }
+  },
+  "version": "1.0.0",
+  "description": "Learn how to:\r - Configure applications to return data based on environment variables.\r - Manage different environments effectively in full-stack development.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HarshThakur015/Deploying-your-API---Practice-assignment-2.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/HarshThakur015/Deploying-your-API---Practice-assignment-2/issues"
+  },
+  "homepage": "https://github.com/HarshThakur015/Deploying-your-API---Practice-assignment-2#readme"
 }
